# pure

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  index.html  logic.cpp  main.cpp  pure
static/: index.html
